[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/migrations/*"]

[flake8]
max-line-length = 120

[tool.poetry]
name = "weni-chats"
version = "0.1.0"
description = ""
authors = ["helllllllder <heldergsds@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
Pillow = "^9.1.1"
channels = "4.0.0"
django-environ = "^0.8.1"
pymongo = "3.12.1"
black = "^22.3.0"
isort = "5.12.0"
channels-redis = "4.1.0"
coreapi = "^2.3.3"
drf-yasg = "^1.20.0"
django-cors-headers = "^3.13.0"
django-csp = "^3.7"
mozilla-django-oidc = "^2.0.0"

sentry-sdk = "^1.8.0"
boto3 = "^1.37.38"
click = "^8.1.3"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
django-filter = "^22.1"
django-storages = "^1.12.3"
django-timezone-field = "^5.0"
tzdata = "^2022.2"
djangorestframework = "3.13.1"
pendulum = "^2.1.2"
prometheus-client = "^0.15.0"
pydub = "^0.25.1"
python-magic = "^0.4.27"
pylint = "v2.8.3"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
XlsxWriter = "^3.1.0"
django-redis = "^5.2.0"
elastic-apm = "^6.10.1"
django-prometheus = "^2.3.1"
celery = "^5.3.1"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.5.0"
parameterized = "^0.9.0"
django-model-utils = "^5.0.0"
urllib3 = "1.26.20"
growthbook = "^1.3.1"
standardwebhooks = "^1.0.0"
daphne = "^4.0.0"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
coverage = "^7.2.2"
ipython = "^8.12.0"
bandit = "^1.7.5"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
